--- a/README
+++ b/README
@@ -13,7 +13,7 @@ from the environment in the MBU lab.
 [TODO]
 
 # Resources
-CloudForms as a Container -- http://cloudformsblog.redhat.com/2016/09/14/cloudforms-as-a-container/
+http://red.ht/2ghjfl0 (CloudForms as a Container)
 
 # Authors
 Kyle Benson
