Added bitly link

--- a/README
+++ b/README
@@ -13,7 +13,7 @@ from the environment in the MBU lab.
 [TODO]
 
 # Resources
-http://red.ht/2ghjfl0 (CloudForms as a Container)
+CloudForms as a Container: http://red.ht/2ghjfl0
 
 # Authors
 Kyle Benson
