--- a/README
+++ b/README
@@ -3,6 +3,9 @@ Dockerizing CloudForms 4.1 (CFME) for building CloudForms demos.
 Based on registry.access.redhat.com/cloudforms/cfme4:latest, adds database dump
 from the environment in the MBU lab.
 
+# Prerequisites
+[TODO]
+
 # Usage
 [TODO]
 
