--- a/README
+++ b/README
@@ -10,28 +10,14 @@ from the environment in the MBU lab.
 - RedHat VPN access
 
 # Usage
-Build docker container.
+Build & push Docker image.
 $ sh bin/init.sh
-
-Run docker container.
-$ docker run --privileged -di -p 80:80 -p 443:443 --name cfme4-demo ecwpz91/cfme4-demo
-
-SSH into the docker container.
-$ docker exec -it cfme4-demo /bin/bash
-
-Stop the docker container.
-$ docker stop cfme4-demo
-
-Remove the docker container.
-$ docker rm cfme4-demo
-
-# Credentials
-Open a browser to "https://localhost/" and login with 'admin' & 'smartvm' (default password).
 
 # Resources
 Install Docker Engine: http://dockr.ly/2g6Gym2
 CloudForms as a Container: http://red.ht/2ghjfl0
 CloudForms Workshops: http://bit.ly/2gqNZRa
+CloudForms Public Docker Hub Repository: http://dockr.ly/2gkmpYq
 
 # Authors
 Michael Surbey
