--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Based on registry.access.redhat.com/cloudforms/cfme4:latest, adds database dump
 from the environment in the MBU lab.
 
 # Prerequisites
-- git
+- Git
 - GitHub account
 - Docker Engine
 - RedHat VPN access
